[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MediaMolder"
authors = [
    {name = "Brandon Drummond", email = "brandon@prototensor.com"}
]
description = "Media scaling and manipulation library"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests > 2.26.0",
    "pandas"
]
